# TekusAgentic

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  prompt-arranque-claude-code.md
backend/: README.md  config.py  main.py  pyproject.toml
backend/agents/: README.md  llm_client.py  llm_client_openai.py
backend/agents/politicas/: guardrails.py
backend/agents/soporte/: agente.py  grafo.py
backend/agents/soporte_web/: estado.py  grafo.py  memoria.py  nlg.py  nlu.py  politica.py
backend/api/: README.md
backend/api/platform/: auth.py  rag_qa.py  router.py
backend/api/webhooks/: whatsapp.py
backend/connectors/: README.md  odoo_common.py
backend/connectors/confluence/: client.py
backend/connectors/odoo_helpdesk/: client.py
backend/connectors/whatsapp/: client.py
backend/knowledge_mining/: README.md  backfill_resolved_tickets.py  index_tickets_to_rag.py  odoo_ticket_sync.py
backend/models/: README.md  rag.py
backend/rag/: README.md
backend/rag/_seed_data/: AK.json  AL.json  kiosk.json
backend/rag/indexacion/: chunking.py  embeddings.py  indexer.py  provider_factory.py
backend/rag/ingesta/: exclusions.py
backend/rag/recuperacion/: hybrid_search.py
backend/scripts/: seed_confluence.py  test_odoo_connection.py
backend/tests/: conftest.py  test_agente_soporte.py  test_hybrid_search.py  test_indexer_incremental.py  test_llm_client.py  test_odoo_helpdesk.py  test_platform_auth.py  test_rag_qa.py  test_whatsapp_webhook.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
(+35 files in other folders)
