[project]
name = "tekus-agente-whatsapp"
version = "0.1.0"
description = "Agente conversacional de WhatsApp (soporte + ventas) orquestado por IA para Tekus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "langgraph>=0.2",
    "pywa>=2.6",
    "odoorpc>=0.10",
    "atlassian-python-api>=3.41",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.1",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "fakeredis>=2.26",
    "black>=24.10",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
